# panelclone-zmq-protobuf

./: CMakeLists.txt  DatarefPublisher.cpp  DatarefPublisher.hpp  Dref.cpp  Dref.hpp  build_proto  event.pb.cc  event.pb.h  event.proto  event_pb2.py  plugin.cpp  pluginWin.cpp  publish.cpp  subscribe.cpp  xpilot.pb.cc  xpilot.pb.h  xpilot.proto  xpilot_pb2.py
subscriber/: DatarefSubscriber.cpp  DatarefSubscriber.hpp  PanelTextureSubscriber.cpp  PanelTextureSubscriber.hpp  PubFloatValue.cpp  PubFloatValue.hpp  PubValue.hpp
